syntax = "proto3";

option go_package = "/AddServ";

service AddService {
    rpc Add (AddRequest) returns (AddResponse);
    rpc AddTwice (AddTwiceRequest) returns (AddTwiceResponse);
}

message AddRequest {
    int32 a = 1;
    int32 b = 2;
}

message AddResponse {
    int32 result = 1;
}

message AddTwiceRequest {
    int32 a = 1;
    int32 b = 2;
}

message AddTwiceResponse {
    int32 result = 1;
}